<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cycletome</string>
    <string name="action_settings">Settings</string>    
    <string name="lbl_check_serial">serial number to check</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="txt_bikeStatusNotInDb">The bike you are searching for it\'s not in our database</string>
    <string name="txt_bikeStatusStolen">The bike you are searching for was reported stolen</string>
    <string name="txt_bikeStatusOwned">The bike you are searching for it\'s currently owned</string>
    <string name="lbl_Model">Model:</string>
    <string name="lbl_LoginToRegister">To register your bike you need to login</string>
    <string name="app_id">500780326714460</string>
    <string name="msg_unable_to_login">Unable to login</string>
    <string name="msg_error_login_message">An error occurred while trying to login. Please make sure your Internet connection is open and data plan active.</string>
    <string name="lbl_add_bike">add a bike</string>
    <string name="lbl_view_bikes">my bikes</string>
    <string name="title_activity_bike_list_screen">BikeListScreen</string>
    <string name="lbl_my_bikes">My bikes</string>
    <string name="lbl_btn_add">add</string>
    <string name="lbl_btn_sold">sold</string>
    <string name="lbl_btn_stolen">stolen</string>
    <string name="lbl_btn_recovered">recovered</string>    
    <string name="txt_mark_as">Mark as</string>
    <string name="lbl_serial">Serial</string>
    <string name="title_activity_new_bike_screen">NewBikeScreen</string>
    <string name="lbl_bike_model">Model</string>
    <string name="lbl_bike_serial_number">Serial</string>
    <string name="title_activity_browse_picture">BrowsePictureActivity</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="txt_ok">OK</string>
	<string name="txt_cancel">Cancel</string>
	<string name="txt_search_btn">go</string>
	<string name="btn_save_bike">save</string>
	<string name="txt_acc_settings">my account</string>
	<string name="lbl_signout_note">Signing out will not remove your bikes. You will just be unable to edit your bikes and your privacy settings</string>
	<string name="msg_we_are_sorry">We are sorry</string>
	<string name="msg_stolen_bike_marked">Your bike has been marked as stolen in our database</string>
	<string name="msg_bike_was_sold">Bike was sold</string>
	<string name="msg_bike_sold_note">When your bike is sold it will be removed from our databases being the duty of the new owner to register it again</string>
	<string name="msg_serial_exists">Serial number already exists</string>
	<string name="msg_mail_bike_found">I have found your bike!</string>
	<string name="msg_note_provide_details">Note: sharing your contact details can be very useful when your stolen bike is found by someone</string>
	<string name="lbl_show_identity">Show my contact details when the serial of my stolen bike is searched for</string>
	<string name="lbl_phone_number">Phone number</string>
	<string name="lbl_front_picture">Side picture</string>
	<string name="lbl_mandatory">(mandatory)</string>
	<string name="lbl_serial_number">Serial number</string>
	<string name="lbl_saving_ongoing">saving...</string>	
</resources>
