<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#3E00b7db" >

    <RelativeLayout
        android:id="@+id/layout_bike_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/img_bike_preview"
            android:layout_width="105dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:focusable="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/lbl_stolen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lbl_btn_stolen"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#90FF0000" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"  
        android:layout_toRightOf="@id/layout_bike_pic"      
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl_bike_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lbl_serial_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/txt_mark_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/txt_mark_as"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_sold"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/round_button"
                android:focusable="false"
                android:text="@string/lbl_btn_sold" />

            <Button
                android:id="@+id/btn_stolen"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/round_button"
                android:focusable="false"
                android:text="@string/lbl_btn_stolen" />
            
            <Button
                android:id="@+id/btn_recovered"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/round_button"
                android:focusable="false"
                android:text="@string/lbl_btn_recovered"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>