<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00087DFB"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context=".BikeListScreen" >

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/selection_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="22dp"
        android:onClick="onShowUserProfile"
        app:is_cropped="true"        
        facebook:preset_size="normal" >
    </com.facebook.widget.ProfilePictureView>  
        
    <TextView
        android:id="@+id/lbl_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:text="alin iordache"    
        android:onClick="onShowUserProfile"
        android:layout_toRightOf="@id/selection_profile_pic"   
        android:layout_alignParentTop="true" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/WhiteSmoke" />

     <Button
        android:id="@+id/btn_acc_settings"
        android:layout_width="wrap_content"
        android:layout_height="25dp"      
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:layout_below="@id/lbl_user_name"        
        android:layout_toRightOf="@id/selection_profile_pic"        
        android:text="@string/txt_acc_settings"
        android:onClick="onAccountSettings" />    
        
    <Button
        android:id="@+id/btn_add_new_bike"
        android:layout_width="wrap_content"
        android:layout_height="25dp"      
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_below="@id/selection_profile_pic"        
        android:text="@string/lbl_btn_add" />

      <TextView
        android:id="@+id/lbl_my_bikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn_add_new_bike"
        android:onClick="onAddNewBike"
        android:text="@string/lbl_my_bikes"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
</RelativeLayout>